--- a/Astar.tex
+++ b/Astar.tex
@@ -1,14 +1,7 @@
-\osprey3's code has been heavily optimized to improve single-threaded performance. Two main areas have received the most attention, and the most improvement in performance, so far: \as search speed, and conformation minimization speed.
+\osprey 3.0's code has been heavily optimized to improve single-threaded performance relative to the previous version, \osprey 2.2~\cite{COMETS}. Two main areas have received the most attention, and the most improvement in performance, so far: \as search speed, and conformation minimization speed.
 
-The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexible residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while preserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can execute the scoring functions on \as nodes. Optimizations in \osprey3 have dramatically increased the \as node scoring speed mainly through the re-use of computed values between different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design and can be cached throughout the rest of the search. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
+\osprey uses the \as search algorithm~\cite{DEE/A*} to perform its combinatorial search over sequence and conformational space.  The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexible residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while preserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can evaluate the scoring functions on \as nodes. Optimizations in \osprey3 have dramatically increased the \as node scoring speed mainly through the re-use of computed values between different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design and can be cached throughout the rest of the search. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
 
-\osprey3 also includes optimizations to improve the performance of forcefield evaluation and conformation minimization. The code in \osprey3 which evaluates forcefield energies for a protein conformation has been heavily optimized, although speed gains here over \osprey2 are modest (roughly two-fold), since the original code was already well-optimized in this area. Much larger performance increases were gained by caching forcefield parameters and lists of atom pairs between different conformations to be minimized yielded roughly a 10-fold increase in speed. %\jeff{I'm going off of memory for the impact of these optimizations. Hopefully rough estimates are good enough here? Or maybe this is too much detail altogether?}
+\osprey 3.0 also includes optimizations to improve the performance of forcefield evaluation and conformation minimization. Conformation minimization is typically the bottleneck in \osprey calculations with continuous flexibility~\cite{minDEE,iMinDEE,DEEPer,CATS}.  The code in \osprey 3.0 that evaluates forcefield energies for a protein conformation has been heavily optimized, although speed gains here over \osprey2 are modest (roughly two-fold), since the original code was already well-optimized in this area. Much larger performance increases were gained by caching forcefield parameters and lists of atom pairs between different conformations to be minimized yielded roughly a 10-fold increase in speed. \osprey 3.0 also increases performance by only evaluating forcefield terms involving mutable and/or flexible residues in a design, since interaction energies between other residues will be exactly the same across all sequences and conformations.  Since most designs only model a minority of the residues in a protein as flexible, this can be a substantial improvement. 
 
-Combined together, these optimizations to single-threaded performance made \osprey3 about 425-fold faster than \osprey2 on a small benchmark sidechain packing problem (See Figure~\ref{fig:speedup}).
-
-\begin{figure}
-\center
-\includegraphics[width=2in]{figures/speedup.pdf}
-\caption{On a small benchmark sidechain packing problem involving a 114-residue fragment of PDZ3 domain of PSD-95 protein complexed with a 6-residue peptide ligand (PDB ID: 1TP5) and consisting of six continuously flexible residues, \osprey3 (blue) finished the design 425-fold faster than \osprey2 (red). Runtimes for the benchmark design are represented as the areas of the discs. A smaller disc represents a faster runtime. This benchmark was performed in a single thread running on an Intel Xeon E5-2640 v4 CPU.}
-\label{fig:speedup}
-\end{figure}
+Combined together, these optimizations to single-threaded performance made \osprey 3.0 about 425-fold faster than \osprey 2.2 on a small benchmark sidechain packing problem involving a 114-residue fragment of PDZ3 domain of PSD-95 protein complexed with a 6-residue peptide ligand (PDB ID: 1TP5) and consisting of six continuously flexible residues.  On an Intel Xeon E5-2640 v4 CPU, \osprey 2.2 took 49.5 minutes to run this benchmark, but \osprey 3.0 finished in 7.0 seconds.  
