--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -111,8 +111,8 @@ We present the third major release of the OSPREY protein design software, along 
 \section*{\sffamily \Large INTRODUCTION} 
 \input{introduction.tex}
 
-\section*{\sffamily \Large PERFORMANCE ENHANCEMENTS IN VERSION 3}
-\jccsubsection{Further optimizing code yields large single-threaded speedups}
+\section*{\sffamily \Large PERFORMANCE ENHANCEMENTS IN \osprey 3.0}
+\jccsubsection{Engineering improvements yield large single-threaded speedups}
 \input{Astar.tex}
 \jccsubsection{GPU acceleration reduces design runtimes}
 \input{GPU.tex}
@@ -121,7 +121,7 @@ We present the third major release of the OSPREY protein design software, along 
 \input{python.tex}
 
 
-\section*{\sffamily \Large NEW PROTEIN DESIGN ALGORITHMS IN VERSION 3}
+\section*{\sffamily \Large NEW PROTEIN DESIGN ALGORITHMS IN \osprey 3.0}
 \jccsubsection{LUTE: Putting advanced modeling into a form suitable for efficient, discrete design calculations}
 \input{LUTE.tex}
 \jccsubsection{CATS: Local backbone flexibility in all biophysically feasible dimensions}
