CATS, conclusions, etc.

--- a/python.tex
+++ b/python.tex
@@ -1,14 +1,14 @@
 
-One of the most visible additions to \osprey3 is the Python application programming interface (API), which allows fine-grained control over design parameters in a streamlined and easy-to-use experience. \osprey3 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. %\jeff{Is this even true? Not entirely sure...} 
+One of the most visible additions to \osprey 3.0 is the Python application programming interface (API), which allows fine-grained control over design parameters in a streamlined and easy-to-use experience. \osprey 3.0 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. %\jeff{Is this even true? Not entirely sure...} 
 
-The \osprey3 distribution contains a Python module which can be installed using the popular package manager {\sc pip}. Once installed, using \osprey3 is as easy as writing a python script. High-performance computations are still performed in the Java virtual machine to give the fastest runtimes, so Java is still required to run \osprey3, but communication between the Python environment and the Java environment is handled behind-the-scenes, and \osprey3 still looks and feels like a regular Python application.
+The \osprey 3.0 distribution contains a Python module which can be installed using the popular package manager {\sc pip}. Once installed, using \osprey 3.0 is as easy as writing a python script. High-performance computations are still performed in the Java virtual machine to give the fastest runtimes, so Java is still required to run \osprey 3.0, but communication between the Python environment and the Java environment is handled behind-the-scenes, and \osprey 3.0 still looks and feels like a regular Python application.
 
-See Figure~\ref{fig:python} for a complete example of a Python script that performs a very simple design using \osprey3.
+See Figure~\ref{fig:python} for a complete example of a Python script that performs a very simple design using \osprey 3.0.
 
 \begin{figure}
 {\fontfamily{pcr}
 	\lstinputlisting[language=Python]{figures/findGMEC.py}
 }
-\caption{A Python script that performs a very simple design in \osprey3.}
+\caption{A Python script that performs a very simple design in \osprey 3.0.  The design searches over sequences in which residues 2 and/or 3 of the Atx1 metallochaperone protein (PDB ID: 1CC8)~\cite{1CC8} are mutated; residues 2-4 are all modeled with sidechain flexibility.  }
 \label{fig:python}
 \end{figure}
