--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -139,7 +139,7 @@ We present the third major release of the OSPREY protein design software, along 
 
 
 \subsection*{\sffamily \large ACKNOWLEDGMENTS}
-The authors would like to thank Alvin Lebeck for helpful discussions on GPUs, and the NIH for funding.  
+The authors would like to thank Alvin Lebeck for helpful discussions on GPUs, and the NIH (grant R01-GM-78031 to B.R.D.) and PhRMA and Liebmann Foundations (fellowships to A.U.L. and M.A.H.) for funding.   
 
 \clearpage
 
