--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -141,7 +141,7 @@ We present the third major release of the OSPREY protein design software, along 
 \input{conclusions.tex}
 
 \subsection*{\sffamily \large ACKNOWLEDGMENTS}
-The authors would like to thank Alvin Lebeck for helpful discussions on GPUs, and the NIH (grant R01-GM-78031 to B.R.D.) and PhRMA and Liebmann Foundations (fellowships to A.U.L. and M.A.H.) for funding.   
+The authors would like to thank Dr. Alvin Lebeck for helpful discussions on GPUs, Drs. Kyle Roberts and Swati Jain for helpful discussions on protein design, and the NIH (grants R01 GM-78031 and R01 GM-118543 to B.R.D.), NSF (Graduate Research Fellowship to A.O.), PhRMA Foundation (Informatics Predoctoral Fellowships to A.U.L. and M.A.H.), and Liebmann Foundation (fellowship to M.A.H.) for funding.   
 
 \clearpage
 
