--- a/references.bib
+++ b/references.bib
@@ -2209,3 +2209,9 @@
 
 @misc{clinical605,
 	Title = {{VRC 605: A Phase 1 Dose-Escalation Study of the Safety and Pharmacokinetics of a Human Monoclonal Antibody, VRC07-523LS, Administered Intravenously or Subcutaneously to Healthy Adults. ClinicalTrials.gov Identifier: NCT03015181. NIAID And National Institutes of Health Clinical Center. January (2017). {\tt https://clinicaltrials.gov/ct2/show/NCT03015181}}}}
+
+@misc{nvidia2010programming,
+  title={Programming guide},
+  author={Nvidia, CUDA},
+  year={2010}
+}
