Misc changes suggested by Bruce

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -50,7 +50,7 @@
 
 \definecolor{background-color}{gray}{0.98}
 
-\title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
+\title{{\sc osprey} 3.0: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
 \author{Mark A. Hallen$^{\ddagger,1,3}$, Jeffrey W. Martin$^{\ddagger,1}$, Adegoke Ojewole$^{\dagger,4}$, \\
 Jonathan D. Jou$^{\dagger,1}$, Anna U. Lowegard$^{\dagger,4}$, Marcel S. Frenkel$^5$, Pablo Gainza$^1$, \\
 Hunter M. Nisonoff$^1$, Aditya Mukund$^1$, Siyu Wang$^4$, Graham T. Holt$^4$, David Zhou$^1$, \\
@@ -88,8 +88,8 @@ Protein design, drug design, GPU, structural biology, Python
 \begin{minipage}{1.0\textwidth}
 \includegraphics[width=0.35\textwidth]{figures/abstract_image.png} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
 %\includegraphics[width=110mm,height=20mm]{cc.eps}
-%\\
-We present the third major release of the OSPREY protein design software, along with comparisons to experimental results that confirm its ability to identify protein mutants with improved function.  The new version has significant efficiency, ease-of-use, and algorithmic improvements over previous versions, including GPU acceleration and a new Python interface.  
+\\
+We present the third major release of the OSPREY protein design software, along with comparisons to experimental data that confirm its ability to predict protein mutants with improved function.  \osprey 3.0 has significant efficiency, ease-of-use, and algorithmic improvements over previous versions, including GPU acceleration and a new Python interface.  
 \end{minipage}
 }}
 \end{figure}
