--- a/discussion.tex
+++ b/discussion.tex
@@ -1,7 +1,9 @@
-Computational protein design is still very much an unsolved problem~\cite{alg_SMB_textbook,cosb_design}.  No computational model can consistently and correctly predict the change in protein activity (e.g., binding) due to even a single mutation, and optimizing the change in activity over a large sequence space is a much harder problem than simply predicting it for one sequence.  Nevertheless, as our benchmark results here show, we have made substantial progress toward correctly predicting the effect of mutations on protein activity.  The combinatorial algorithms in \osprey can optimize protein activity---as estimated by the model validated in these benchmarks---over a large sequence space with provable accuracy.  No other software can optimize this model with such guarantees.  For example, the combination of provable algorithms with modeling of continuous protein flexibility and conformational entropy is unique to \osprey.   
+\osprey has demonstrated its accuracy and utility in practice through many prospective designs that have performed well experimentally~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes}.  \osprey 3.0 is at least as accurate as the versions of \osprey used to perform these designs, because it can design using the same biophysical models used in those studies, with provable guarantees of accuracy given the biophysical model.  We have compared design results using \osprey 2.2 and \osprey 3.0 to confirm agreement.  However \osprey 3.0 can perform such designs much more efficiently, due to the engineering improvements described in this paper.  Moreover, in this paper we have performed additional comparisons to experimental data to confirm the accuracy of \osprey 3.0.  \osprey 3.0 also includes methods to improve the biophysical model and thus improve accuracy still further (should the user choose to employ the newer models). 
 
-The enormous speedups in \osprey 3.0, together with the easy-to-use Python interface, thus make it much more tractable to perform protein design with such biophysically realistic modeling and with guaranteed accuracy given the model.  In particular, \osprey 3.0 benefits from many sources of speedups that can be used together.  Speedups from \osprey 3.0's optimization of the minimization, forcefield evaluation, and A* routines can exceed two orders of magnitude even compared to \osprey 2.2 running on the same CPU hardware.  After another speedup of over an order of magnitude from GPU's, a design that would take months using \osprey 2.2 could easily take only a few hours using \osprey 3.0.  The algorithmic improvements that \osprey 3.0 offers could potentially make it even faster---these are not included in this paper's analysis of speedups due to engineering improvements.  
+Computational protein design is still very much an unsolved problem~\cite{alg_SMB_textbook,cosb_design}.  No computational model can consistently and correctly predict the change in protein activity (e.g., binding) due to even a single mutation, and optimizing the change in activity over a large sequence space is a much harder problem than simply predicting it for one sequence.  Nevertheless, as our benchmark results here show, we have made substantial progress toward correctly predicting the effect of mutations on protein activity.  The combinatorial algorithms in \osprey can optimize protein activity---as estimated by the model validated in these benchmarks---over a large sequence space with provable accuracy.  No other software can optimize this model with such mathematical guarantees.  For example, the combination of provable algorithms with modeling of continuous protein flexibility and conformational entropy is unique to \osprey.   
 
-The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much work to be done modeling-wise; larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, may need to be modeled before it is possible to consistently and correctly predict the effects of mutations on protein behavior.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to integrate these algorithms with all of \osprey's current functionality.  
+The enormous speedups in \osprey 3.0, together with the easy-to-use Python interface, thus make it much more tractable to perform protein design with such biophysically realistic modeling and with guaranteed accuracy given the model.  In particular, \osprey 3.0 benefits from many sources of speedups that can be used together.  Speedups from \osprey 3.0's optimization of the minimization, forcefield evaluation, and A* routines can exceed two orders of magnitude even compared to \osprey 2.2~\cite{COMETS} running on the same CPU hardware.  After another speedup of over an order of magnitude from GPU's, a design that would take months using \osprey 2.2 could easily take only a few hours using \osprey 3.0.  Many designs could see even greater speedups, because in addition to these engineering improvements, some of the algorithmic improvements in \osprey 3.0 provide a dramatic increase in computational efficiency.  
+
+The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much work to be done modeling-wise; larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, may need to be modeled before it is possible to consistently and correctly predict the effects of mutations on protein behavior.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to integrate these algorithms with all of \osprey's current functionality.  Moreover, we have released \osprey 3.0 as open source, to aid the community both in the development and the application of improved models and algorithms for computational protein design.  
 
 
