--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,13 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@misc{PIV,
+  title = {Protein Interaction Viewer},
+  author = {Roberts, Kyle E. and Bruce R. Donald},
+  url = {http://www.cs.duke.edu/donaldlab/software/proteinInteractionViewer/},
+  year = {2014},
+ }
+
 @article{binding2barnase,
   title={Interaction of barnase with its polypeptide inhibitor barstar studied by protein engineering},
   author={Schreiber, Gideon and Fersht, Alan R},
