--- a/LUTE.tex
+++ b/LUTE.tex
@@ -2,7 +2,7 @@
 
 First, previous versions modeled continuous flexibility by enumerating conformations in order of a~\textit{lower bound} on minimized conformational energy~\cite{minDEE,iMinDEE}. LUTE addresses this problem by directly optimizing the minimized energies of full conformations, which are estimated using an expansion in low-order tuples of residue conformations.  Thus, the burden of modeling continuous flexibility is shifted from the combinatorial optimization (\as) step, which has unfavorable asymptotic scaling, to a precomputation step that only scales quadratically with the number of residues. This dramatically reduces the computation time for large designs with continuous flexibility, and has doubled the number of residues that can be treated simultaneously with continuous flexibility~\cite{LUTE_RECOMB}.    
 
-Second, all previous combinatorial protein design algorithms have relied on an explicit decomposition of the energy as a sum of local (e.g., pairwise) terms.  This made design with energy functions that do not have this form difficult. LUTE can straightforwardly support general energy functions, and, as shown in~\cite{LUTE_RECOMB}, it can obtain good fits at least in the case of Poisson-Boltzmann energies.  Moreover, once the LUTE precomputation is completed, the time cost of the asymptotically unfavorable combinatorial optimization step does not depend on the energy function used.  This is an enormous advantage for more expensive and accurate energy functions like Poisson-Boltzmann, which otherwise would be far too expensive for all but the smallest combinatorial optimization problems.  
+Second, all previous combinatorial protein design algorithms have relied on an explicit decomposition of the energy as a sum of local (e.g., pairwise) terms.  This made design with energy functions that do not have this form difficult. LUTE can straightforwardly support general energy functions, and, as shown in Ref.~\citen{LUTE_RECOMB}, it can obtain good fits at least in the case of Poisson-Boltzmann energies.  Moreover, once the LUTE precomputation is completed, the time cost of the asymptotically unfavorable combinatorial optimization step does not depend on the energy function used.  This is an enormous advantage for more expensive and accurate energy functions like Poisson-Boltzmann, which otherwise would be far too expensive for all but the smallest combinatorial optimization problems.  
 
 {\sc osprey} users can now turn on LUTE for continuously flexible calculations simply by setting a boolean flag. 
 {\sc osprey} 3.0 also supports design with Poisson-Boltzmann solvation energy calculations, which use the DelPhi~\cite{OSOR,DelPhi_surface} software for the single-point Poisson-Boltzmann calculations (we ask the user to download DelPhi separately for licensing reasons). Such improved modeling is essential to increasing the reliability of and range of feasible uses for computational protein design.  
