Implementing Hunter's comments

--- a/GPU.tex
+++ b/GPU.tex
@@ -1,6 +1,6 @@
 \jeff{Bruce wants us to write a paragraph about the importance of GPUs for MD calculations. I really don't have any experience with MD, so I have no idea what to write here. Does anyone else have something interesting to say?}
 
-A major performance bottleneck of \osprey designs with continuous flexibility is minimizing protein conformations and conformation fragments. Since the space of possible conformations in a design grows exponentially with the number of flexible and mutable residues, the number of conformations that must (in the worst-case) be enumerated to find the GMEC or to approximate the Boltzmann-weighted partition function grows exponentially as well. Since all enumerated conformations must be subsequently minimized to compute their energies, and minimization is a relatively expensive operation, the bulk of a design's runtime can be spent on energy minimization of conformations. Therefore, improvements to the speed of energy minimization (an operation that is called an exponential number of times) can have a dramatic impact on \osprey runtimes.
+A major performance bottleneck of \osprey designs with continuous flexibility is minimizing protein conformations and conformation fragments. Since the space of possible conformations in a design grows exponentially with the number of flexible and mutable residues, the number of conformations that must (in the worst-case) be enumerated to find the GMEC or to approximate the partition function grows exponentially as well. Since all enumerated conformations must be subsequently minimized to compute their energies, and minimization is a relatively expensive operation, the bulk of a design's runtime can be spent on energy minimization of conformations. Therefore, improvements to the speed of energy minimization (an operation that is called an exponential number of times) can have a dramatic impact on \osprey runtimes.
 
 Much work has been done in the past to optimize \osprey for execution on CPUs, particularly highly multi-core CPUs and even networked clusters of CPU-powered servers~\cite{minBounds_DACS,cloud_OSPREY}. However, modern GPU hardware enables high-performance computation at a fraction of the cost of large CPU clusters, mainly due to the huge video game industry that propels innovation in hardware design and drives down costs. \osprey 3.0 includes GPU programs (called {\it kernels}) built using the CUDA framework~\cite{nvidia2010programming} that implements the forcefield calculations and local minimization algorithms used in protein redesign.
 
