--- a/python.tex
+++ b/python.tex
@@ -9,6 +9,6 @@ See Figure~\ref{fig:python} for a complete example of a Python script that perfo
 {\fontfamily{pcr}
 	\lstinputlisting[language=Python]{figures/findGMEC.py}
 }
-\caption{A Python script that performs a very simple design in \osprey 3.0.  The design searches over sequences in which residues 2 and/or 3 of the Atx1 metallochaperone protein (PDB ID: 1CC8)~\cite{1CC8} are mutated; residues 2-4 are all modeled with sidechain flexibility.  }
+\caption{A Python script that performs a very simple design in \osprey 3.0.  The design searches over sequences in which residues A2 and/or A3 of the Atx1 metallochaperone protein (PDB ID: 1CC8)~\cite{1CC8} are mutated; residues A2-A4 are all modeled with sidechain flexibility, consisting of a search over the Penultimate rotamer library\cite{penultimate}'s rotamers for the specified amino acid types.  }
 \label{fig:python}
 \end{figure}
