Implementation of David's comments

--- a/discussion.tex
+++ b/discussion.tex
@@ -4,6 +4,6 @@ Computational protein design is still very much an unsolved problem~\cite{alg_SM
 
 The enormous speedups in \osprey 3.0, together with the easy-to-use Python interface, thus make it much more tractable to perform protein design with such biophysically realistic modeling and with guaranteed accuracy given the model.  In particular, \osprey 3.0 benefits from many sources of speedups that can be used together.  Speedups from \osprey 3.0's optimization of the minimization, forcefield evaluation, and A* routines can exceed two orders of magnitude even compared to \osprey 2.2~\cite{COMETS} running on the same CPU hardware.  After another speedup of over an order of magnitude from GPU's, a design that would take months using \osprey 2.2 could easily take only a few hours using \osprey 3.0.  Many designs could see even greater speedups, because in addition to these engineering improvements, some of the algorithmic improvements in \osprey 3.0 provide a dramatic increase in computational efficiency.  
 
-The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much work to be done modeling-wise; larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, may need to be modeled before it is possible to consistently and correctly predict the effects of mutations on protein behavior.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to integrate these algorithms with all of \osprey's current functionality.  Moreover, we have released \osprey 3.0 as open source, to aid the community both in the development and the application of improved models and algorithms for computational protein design.  
+The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much work to be done modeling-wise; larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, may need to be modeled before it is possible to consistently and correctly predict the effects of mutations on protein behavior.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to implement these algorithms within \osprey's current code base.  Moreover, we have released \osprey 3.0 as open source, to aid the community both in the development and the application of improved models and algorithms for computational protein design.  
 
 
