--- a/Astar.tex
+++ b/Astar.tex
@@ -1,6 +1,6 @@
 \osprey 3.0's code has been heavily optimized to improve single-threaded performance relative to the previous version, \osprey 2.2~\cite{COMETS}. Two main areas have received the most attention, and the most improvement in performance, so far: \as search speed, and conformation minimization speed.
 
-\osprey uses the \as search algorithm~\cite{DEE/A*} to perform its combinatorial search over sequence and conformational space.  The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexible residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while preserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can evaluate the scoring functions on \as nodes. Optimizations in \osprey 3.0 have dramatically increased the \as node scoring speed mainly through the re-use of computed values between different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design and can be cached throughout the rest of the search. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
+\osprey uses the \as search algorithm~\cite{DEE/A*} to perform its combinatorial search over sequence and conformational space.  The performance of \as search in \osprey depends mostly on the size of the conformation space of the design. More mutable and flexible residues create a larger conformation space which must be searched systematically to find the lowest-energy conformations while preserving guarantees on solution quality, and hence the search requires more time. Search time is also dependent on the speed at which we can evaluate the scoring functions on \as nodes. Optimizations in \osprey 3.0 have dramatically increased the \as node scoring speed, mainly by caching the results of expensive computations and reusing them at different nodes. Many intermediate values used by the \as scoring functions need only be computed once per design. This reduces the cost of node scoring by roughly an order of magnitude. We can also score child nodes differentially against their parent nodes to speed up node scoring. Caching intermediate values during the parent node scoring and using them to simplify child node scoring yields roughly another order of magnitude speedup in \as node scoring. %\jeff{trying to be concise here, hopefully we don't need the mathematical details of these \as scoring functions?}
 
 \osprey 3.0 also includes optimizations to improve the performance of forcefield evaluation and conformation minimization. Conformation minimization is typically the bottleneck in \osprey calculations with continuous flexibility~\cite{minDEE,iMinDEE,DEEPer,CATS}.  The code in \osprey 3.0 that evaluates forcefield energies for a protein conformation has been heavily optimized, although speed gains here over \osprey2 are modest (roughly two-fold), since the original code was already well-optimized in this area. Much larger performance increases were gained by caching forcefield parameters and lists of atom pairs between different conformations to be minimized and yielded roughly a 10-fold increase in speed. \osprey 3.0 also increases performance by only evaluating forcefield terms involving mutable and/or flexible residues in a design, since interaction energies between other residues will be exactly the same across all sequences and conformations.  Since most designs only model a minority of the residues in a protein as flexible, this can be a substantial improvement. 
 
